WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56571
First argument passed to WebKit.exe is ignored by Safari
https://bugs.webkit.org/show_bug.cgi?id=56571
Summary
First argument passed to WebKit.exe is ignored by Safari
Adam Roben (:aroben)
Reported
2011-03-17 10:32:10 PDT
To reproduce: 1. Launch Safari 2. Run WebKit.exe /newProcess. Note in Task Manager that only one Safari process is running. 3. Run WebKit.exe foo /newProcess. Note in Task Manager that two Safari processes are now running. It looks like the first argument that's passed to WebKit.exe is not sent to Safari correctly. I think we're misusing the CreateProcess API.
Attachments
Stop using explicit memory management in WebKitLauncherWin
(4.78 KB, patch)
2012-01-05 10:36 PST
,
Adam Roben (:aroben)
sfalken
: review+
Details
Formatted Diff
Diff
Prepend Safari.exe's path to the command-line passed to CreateProcess
(2.71 KB, patch)
2012-01-05 10:37 PST
,
Adam Roben (:aroben)
sfalken
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-06-26 11:15:02 PDT
***
Bug 63389
has been marked as a duplicate of this bug. ***
Adam Roben (:aroben)
Comment 2
2012-01-05 10:36:59 PST
Created
attachment 121296
[details]
Stop using explicit memory management in WebKitLauncherWin
Adam Roben (:aroben)
Comment 3
2012-01-05 10:37:04 PST
Created
attachment 121297
[details]
Prepend Safari.exe's path to the command-line passed to CreateProcess
Adam Roben (:aroben)
Comment 4
2012-01-05 11:57:29 PST
Committed
r104190
: <
http://trac.webkit.org/changeset/104190
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug