Stop using explicit memory management in WebKitLauncherWin

We now use stack-allocated STL objects instead.

Prep work for <http://webkit.org/b/56571> First argument passed to WebKit.exe is ignored by
Safari

Reviewed by Steve Falkenburg.

* WebKitLauncherWin/WebKitLauncherWin.cpp:
(getStringValue):
(applePathFromRegistry):
(safariInstallDir):
(safariBrowserExe):
(_tWinMain):
Changed to use stack-allocated STL objects instead of malloc/free.

Canonical link: https://commits.webkit.org/92432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104189 268f45cc-cd09-0410-ab3c-d52691b4dbfc